# cubemap-demo

./: .gitignore  CMakeLists.txt  README.md
normal-cubemap/: main.c
normal-cubemap.xcodeproj/: project.pbxproj
normal-cubemap.xcodeproj/project.xcworkspace/xcuserdata/igor.xcuserdatad/: UserInterfaceState.xcuserstate
normal-cubemap.xcodeproj/xcuserdata/igor.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: main.c
