cmake_minimum_required(VERSION 3.24)
project(cubemap_demo VERSION 0.0.1 LANGUAGES C)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-deprecated-declarations")
set(PROJECT_OUTPUT_BIN_DIR "${PROJECT_SOURCE_DIR}/bin")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_OUTPUT_BIN_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${PROJECT_OUTPUT_BIN_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${PROJECT_OUTPUT_BIN_DIR}")

find_package(GLUT REQUIRED)
find_package(OpenGL REQUIRED)

include_directories({GLUT_INCLUDE_DIR} {OPENGL_INCLUDE_DIR})

file(GLOB_RECURSE CD_SOURCES CONFIGURE_DEPENDS src/*.c src/*.h)
file(GLOB_RECURSE CD_ASSETS CONFIGURE_DEPENDS assets/*.*)

set(CD_META
  "README.md"
  "LICENSE"
  ".gitignore"
  ".clang-format")

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${CD_SOURCES})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${CD_ASSETS})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${CD_META})

add_executable(${PROJECT_NAME} ${CD_SOURCES} ${CD_ASSETS} ${CD_META})

target_link_libraries(${PROJECT_NAME} GLUT::GLUT OpenGL::GL)
